# metacodex

./: AGENTS.md  AGENTS_DESIGN.md  AGENT_HARNESS_FEATURES.md  AGENT_P1_TEST_CHECKLIST.md  AGENT_VIEW_HANDOFF.md  CLAUDE.md  CONTEXT.md  MENU_UX_PLAN.md  README.md  README.pt-BR.md  REDESIGN_PLAN.md  REVIEW_CRON_SCHEDULED_TASKS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/adr/: 0001-agente-arquivos-portaveis-sem-daemon.md  0002-agent-home-repositorio-git.md
plans/: 001-instant-keyboard-surfaces.md  002-gpu-drag-and-reorder.md  003-snap-shell-layout.md  004-remove-operational-row-entrance.md  005-share-tooltip-timing.md  006-unify-motion-tokens-and-progress.md  007-minimal-control-feedback.md  008-reduced-motion-and-recent-state.md  009-interruptible-toast-motion.md  010-final-motion-review.md  011-refine-panel-drawers.md  012-architecture-path-session-tab.md  README.md
scripts/: gen-signing-cert.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: config_paths.rs  directory_grants.rs  error.rs  events.rs  fs_ops.rs  git.rs  lib.rs  main.rs  open_files.rs  preview_grants.rs  projects.rs  remote_access.rs  search.rs  watcher.rs
src-tauri/src/agent/: cron.rs  entities.rs  executor.rs  life.rs  mcp.rs  mod.rs  runtime.rs  scheduler.rs  skills.rs
src-tauri/src/commands/: agent.rs  cli.rs  diagnostics.rs  filesystem.rs  git.rs  mod.rs  notifications.rs  projects.rs  remote_access.rs  resume.rs  search.rs  settings.rs  system.rs  terminal.rs  watcher.rs  whats_new.rs  workspace.rs
src-tauri/src/pty/: job.rs  mod.rs  session.rs  shell.rs
src-tauri/src/remote_access/: fs.rs  mod.rs  paths.rs  session.rs  ssh.rs  store.rs  types.rs
src-tauri/src/util/: mod.rs  paths.rs  process.rs
src/app/: AppShell.tsx  CloseTabsConfirm.tsx  KeyboardShortcuts.tsx  ProjectEmptyState.tsx  TitleBar.tsx  WelcomeScreen.tsx  appCommands.ts  appShell.helpers.ts
src/app/hooks/: useAppBootstrap.ts  useDelayedFlag.ts  useFilesystemSync.ts  useTabActions.ts  useWorkspacePersistence.ts
src/assets/fonts/: LICENSE
src/components/agent/: AgentComposer.tsx  AgentHero.tsx  AgentOnboarding.tsx  AgentSidebar.tsx  AgentView.tsx  ProjectSection.tsx  SidebarTasks.tsx  SidebarThreads.tsx
src/components/code-sidebar/: CodeProjectGroup.tsx  ExpandedProjectsSidebar.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/diagnostics/: DiagnosticLogPanel.tsx
src/components/editor/: DiffTab.tsx  EditorBreadcrumbs.tsx  EditorStatusBar.tsx  EditorTab.tsx  codeScopes.ts  diffTheme.ts  editorTheme.ts  gitGutter.ts  stickyScroll.ts
src/components/file-explorer/: ExplorerPanel.tsx  ExplorerTogglePill.tsx  FileExplorer.tsx  FileIcon.tsx  TreeNode.tsx
src/components/previews/: DirectoryPicker.tsx  DropOverlay.tsx  ImagePreview.tsx  MarkdownPreview.tsx  PdfPreview.tsx  PreviewToolbar.tsx  SendToProjectDialog.tsx
src/components/project-rail/: CloneFromGithubDialog.tsx  MiniProjectSidebar.tsx  ProjectContextMenu.tsx  ProjectGlyph.tsx  ProjectStatusDot.tsx  ProjectTile.tsx  RemoteAccessDialog.tsx  RemoveProjectDialog.tsx  RenameProjectDialog.tsx  projectIdentity.ts  useRemoteAccessDialogState.ts
src/components/resume/: ResumeCards.tsx
src/components/search/: SearchDialog.tsx
src/components/settings/: SettingsDialog.tsx  SettingsPrimitives.tsx  ThemeCard.tsx  ThemePicker.tsx
src/components/side-panel/: SidePanel.tsx  SidePanelToggle.tsx
src/components/source-control/: SourceControlPanel.tsx  WorktreeCreateDialog.tsx  WorktreeMergeDialog.tsx  WorktreesSection.tsx
src/components/tabs/: NewTabMenu.tsx  TabBar.tsx  TabContent.tsx  TabContextMenu.tsx  TabStatusDot.tsx  TabTooltip.tsx  TabTrailingActions.tsx  TabWorktreePill.tsx  WorkArea.tsx  fileKind.ts  statusTone.ts  tabsStore.ts  types.ts
src/components/terminal/: CliMissingPanel.tsx  CliTabComponent.tsx  TerminalExitBanner.tsx  TerminalSessionLoading.tsx  TerminalTab.tsx  agentHeuristic.ts  oscHandlers.ts  terminalLinks.ts  useXterm.ts
src/components/ui/: BackgroundGrain.tsx  Badge.tsx  Button.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icon.tsx  IconButton.tsx  Kbd.tsx  LateralTabs.tsx  NumberStepper.tsx  ResizeHandle.tsx  Segmented.tsx  Select.tsx  SidebarRow.tsx  Switch.tsx  Toaster.tsx  Tooltip.tsx  icons.tsx  useAnchoredPopup.ts  useListReorder.tsx
src/components/updates/: UpdatePill.tsx
src/components/whats-new/: WhatsNewDialog.tsx
src/features/agent/: attachments.ts  chat.events.ts  chat.store.ts  commands.ts  composer.store.ts  contextParts.ts  cron.describe.ts  cron.fromText.ts  cron.store.ts  entities.fromText.ts  entities.store.ts  find.ts  mcp.store.ts  nav.store.ts  oc.ts  opencode.ts  overlayPanels.store.ts  runtime.store.ts  sessions.store.ts  skills.ts  streamdownCode.ts  streamdownI18n.ts  visionRelay.ts
src/features/command-palette/: command-palette.store.ts
src/features/diagnostics/: diagnostics.store.ts
src/lib/: base64.ts  cn.ts  events.ts  fuzzy.ts  grapheme.ts  idGen.ts  ipc.ts  lineDiff.ts  path.ts  platform.ts  time.ts
src/styles/: diff.css  fonts.css  scrollbar.css  streamdown.css  tokens.css  xterm.css
(+165 files in other folders)
