[package]
name = "metacodex"
version = "0.0.16"
description = "metacodex: premium local-first developer workspace"
authors = ["Victor"]
edition = "2021"

[lib]
name = "metacodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
ssh2 = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
which = "6"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
# reqwest 0.13 + rustls 0.23 no longer auto-install a process-wide crypto
# provider. We install ring's once at startup (see lib.rs::run) so building any
# reqwest::Client doesn't panic "No provider set". Pinned to the ring provider
# that's already in the tree (no aws-lc-rs).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# SIGKILL escalation for stuck PTY children (portable-pty's killer only sends
# SIGHUP). Unix-only; on Windows portable-pty already does a forceful kill.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only.
# - `netstat2`: fast listening-port enumeration via IP Helper API. Replaces the
#   macOS `lsof` shell-out path inside `commands::terminal::list_listening_ports`.
# - `windows`: Job Object bindings (see `pty::job`) so killing a PTY also kills
#   every descendant (`claude.cmd` → `node.exe`) via `JOB_OBJECT_LIMIT_KILL_ON_JOB_CLOSE`.
[target.'cfg(target_os = "windows")'.dependencies]
netstat2 = "0.11"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
